[package]
name = "docland"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4.1"
futures = "0.3.1"
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-multipart = "0.2.0"
async-std = "1.4.0"
sanitize-filename = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
ring = "0.16.15"
data-encoding = "2.3.0"
